Add build scripts and statik
